added missing cleanup

--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -193,7 +193,7 @@
      <addaction name="removeAllCachesAct"/>
      <addaction name="removeSavestatesAct"/>
      <addaction name="separator"/>
-     <addaction name="cleanupGamesListAct"/>
+     <addaction name="cleanupGameListAct"/>
     </widget>
     <widget class="QMenu" name="menuFirmware">
      <property name="title">
