Add Empty Dev_Hdd0/tmp to the UI
This option is need for those using sprx mods and amongst other homebrew reasons such as apollo savedata.

--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -1940,6 +1940,13 @@
                </property>
               </widget>
              </item>
+             <item>
+              <widget class="QCheckBox" name="emptyHdd0Tmp">
+               <property name="text">
+                <string>Empty /dev_hdd0/tmp/</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </widget>
           </item>
