--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -3023,6 +3023,13 @@
                 </widget>
                </item>
                <item>
+                <widget class="QCheckBox" name="enableGamemode">
+                 <property name="text">
+                  <string>Enable GameMode</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <spacer name="emulatorTabSpacerLeft">
                  <property name="orientation">
                   <enum>Qt::Orientation::Vertical</enum>
