--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -3009,6 +3009,13 @@
                 </widget>
                </item>
                <item>
+                <widget class="QCheckBox" name="showCaptureHints">
+                 <property name="text">
+                  <string>Show capture hints</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <widget class="QCheckBox" name="startGameFullscreen">
                  <property name="text">
                   <string>Start games in fullscreen mode</string>
@@ -3028,7 +3035,7 @@
                   <bool>false</bool>
                  </property>
                  <property name="visible">
-                   <bool>false</bool>
+                  <bool>false</bool>
                  </property>
                  <property name="text">
                   <string>Enable GameMode</string>
