--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -4548,6 +4548,13 @@
                  </widget>
                 </item>
                 <item>
+                 <widget class="QCheckBox" name="debugOverlayMouse">
+                  <property name="text">
+                   <string>Debug Overlay For Mouse Input</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
                  <spacer name="verticalSpacer">
                   <property name="orientation">
                    <enum>Qt::Orientation::Vertical</enum>
