rsx: allow to toggle 3D modes dynamically
A new checkbox for 3D support needs to be enabled at boot though.

--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -552,6 +552,13 @@
               </property>
               <layout class="QVBoxLayout" name="gb_stereo_layout">
                <item>
+                <widget class="QCheckBox" name="stereoRenderEnabled">
+                 <property name="text">
+                  <string>Enable 3D Support</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <widget class="QComboBox" name="stereoRenderMode"/>
                </item>
               </layout>
