--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -412,6 +412,12 @@
     <addaction name="aboutAct"/>
     <addaction name="aboutQtAct"/>
    </widget>
+   <widget class="QMenu" name="menuUpdate_Available">
+    <property name="title">
+     <string>Update Available!</string>
+    </property>
+    <addaction name="actionDownload_Update"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEmulation"/>
    <addaction name="menuConfiguration"/>
@@ -419,6 +425,7 @@
    <addaction name="menuUtilities"/>
    <addaction name="menuView"/>
    <addaction name="menuHelp"/>
+   <addaction name="menuUpdate_Available"/>
   </widget>
   <widget class="QToolBar" name="toolBar">
    <property name="sizePolicy">
@@ -1446,6 +1453,11 @@
   <action name="actionManage_SoundEffects">
    <property name="text">
     <string>Sound Effects</string>
+   </property>
+  </action>
+  <action name="actionDownload_Update">
+   <property name="text">
+    <string>Download Update</string>
    </property>
   </action>
  </widget>
