Clans: CheckBox instead of a ComboBox, Boolean instad of an Enum config option
Signed-off-by: zeph <zephyrzefa15@gmail.com>

--- a/rpcs3/rpcs3qt/settings_dialog.ui
+++ b/rpcs3/rpcs3qt/settings_dialog.ui
@@ -2320,15 +2320,10 @@
               </widget>
              </item>
              <item>
-              <widget class="QGroupBox" name="gb_clansStatusBox">
-               <property name="title">
-                <string>Clans Status</string>
-               </property>
-               <layout class="QVBoxLayout" name="gb_clansStatusBox_layout">
-                <item>
-                 <widget class="QComboBox" name="clansStatusBox"/>
-                </item>
-               </layout>
+              <widget class="QCheckBox" name="enable_clans">
+                <property name="text">
+                 <string>Enable Clans</string>
+                </property>
               </widget>
              </item>
              <item>
