--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -218,7 +218,6 @@
     <addaction name="bootRecentMenu"/>
     <addaction name="separator"/>
     <addaction name="addGamesAct"/>
-    <addaction name="separator"/>
     <addaction name="bootInstallPkgAct"/>
     <addaction name="bootInstallPupAct"/>
     <addaction name="separator"/>
@@ -243,9 +242,25 @@
     <property name="title">
      <string>Configuration</string>
     </property>
-    <widget class="QMenu" name="menuEmulatedPads">
+    <widget class="QMenu" name="menuMice">
      <property name="title">
-      <string>USB Devices</string>
+      <string>Mice</string>
+     </property>
+     <addaction name="actionBasic_Mouse"/>
+     <addaction name="actionRaw_Mouse"/>
+    </widget>
+    <widget class="QMenu" name="menuDevices">
+     <property name="title">
+      <string>Devices</string>
+     </property>
+     <addaction name="confPadsAct"/>
+     <addaction name="menuMice"/>
+     <addaction name="confCamerasAct"/>
+     <addaction name="actionPS_Move_Tracker"/>
+    </widget>
+    <widget class="QMenu" name="menuEmulatedDevices">
+     <property name="title">
+      <string>Emulated Devices</string>
      </property>
      <addaction name="confBuzzAct"/>
      <addaction name="confGHLtarAct"/>
@@ -259,21 +274,8 @@
      <addaction name="confTopShotFearmasterAct"/>
      <addaction name="confLogitechG27Act"/>
     </widget>
-    <widget class="QMenu" name="menuMice">
-     <property name="title">
-      <string>Mice</string>
-     </property>
-     <addaction name="actionBasic_Mouse"/>
-     <addaction name="actionRaw_Mouse"/>
-    </widget>
     <addaction name="confCPUAct"/>
     <addaction name="confGPUAct"/>
-    <addaction name="separator"/>
-    <addaction name="confPadsAct"/>
-    <addaction name="menuMice"/>
-    <addaction name="menuEmulatedPads"/>
-    <addaction name="confCamerasAct"/>
-    <addaction name="actionPS_Move_Tracker"/>
     <addaction name="confAudioAct"/>
     <addaction name="confIOAct"/>
     <addaction name="confSystemAct"/>
@@ -281,6 +283,9 @@
     <addaction name="confAdvAct"/>
     <addaction name="confEmuAct"/>
     <addaction name="confGuiAct"/>
+    <addaction name="separator"/>
+    <addaction name="menuDevices"/>
+    <addaction name="menuEmulatedDevices"/>
     <addaction name="separator"/>
     <addaction name="confShortcutsAct"/>
     <addaction name="actionManage_SoundEffects"/>
@@ -368,12 +373,18 @@
      <addaction name="showCustomIconsAct"/>
      <addaction name="playHoverGifsAct"/>
     </widget>
-    <widget class="QMenu" name="menuGame_List_Mode">
+    <widget class="QMenu" name="menuGame_List_View">
      <property name="title">
-      <string>Game List Mode</string>
+      <string>Game List View</string>
      </property>
-     <addaction name="setlistModeListAct"/>
-     <addaction name="setlistModeGridAct"/>
+     <addaction name="setListModeAct"/>
+     <addaction name="setGridModeAct"/>
+    </widget>
+    <widget class="QMenu" name="menuGame_List_Grid_Mode">
+     <property name="title">
+      <string>Game List in Grid Mode</string>
+     </property>
+     <addaction name="showCompatibilityInGridAct"/>
     </widget>
     <widget class="QMenu" name="menuGame_Categories">
      <property name="title">
@@ -398,15 +409,14 @@
     <addaction name="showToolBarAct"/>
     <addaction name="separator"/>
     <addaction name="showGameListAct"/>
-    <addaction name="separator"/>
     <addaction name="showHiddenEntriesAct"/>
     <addaction name="separator"/>
-    <addaction name="showCompatibilityInGridAct"/>
-    <addaction name="separator"/>
-    <addaction name="refreshGameListAct"/>
-    <addaction name="menuGame_List_Mode"/>
+    <addaction name="menuGame_List_View"/>
+    <addaction name="menuGame_List_Grid_Mode"/>
     <addaction name="menuGame_List_Icons"/>
     <addaction name="menuGame_Categories"/>
+    <addaction name="separator"/>
+    <addaction name="refreshGameListAct"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -418,11 +428,10 @@
      </property>
      <addaction name="languageAct0"/>
     </widget>
-    <addaction name="updateAct"/>
-    <addaction name="welcomeAct"/>
-    <addaction name="separator"/>
     <addaction name="languageMenu"/>
     <addaction name="separator"/>
+    <addaction name="updateAct"/>
+    <addaction name="welcomeAct"/>
     <addaction name="supportAct"/>
     <addaction name="separator"/>
     <addaction name="aboutAct"/>
@@ -661,7 +670,7 @@
   </action>
   <action name="exitAndSaveLogAct">
    <property name="text">
-    <string>Exit And Save Log</string>
+    <string>Exit and Save Log</string>
    </property>
    <property name="toolTip">
     <string>Exit RPCS3, move the log file to a custom location</string>
@@ -818,12 +827,12 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Show Game Compatibility in Grid Mode</string>
+    <string>Show Game Compatibility</string>
    </property>
   </action>
   <action name="refreshGameListAct">
    <property name="text">
-    <string>Game List Refresh</string>
+    <string>Refresh Game List</string>
    </property>
   </action>
   <action name="actionManage_RAP_Licenses">
@@ -841,7 +850,7 @@
   </action>
   <action name="welcomeAct">
    <property name="text">
-    <string>View The Welcome Dialog</string>
+    <string>View Welcome Dialog</string>
    </property>
   </action>
   <action name="confVFSDialogAct">
@@ -897,7 +906,7 @@
     <string>Large</string>
    </property>
   </action>
-  <action name="setlistModeListAct">
+  <action name="setListModeAct">
    <property name="checkable">
     <bool>true</bool>
    </property>
@@ -905,15 +914,15 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>List View</string>
+    <string>List Mode</string>
    </property>
   </action>
-  <action name="setlistModeGridAct">
+  <action name="setGridModeAct">
    <property name="checkable">
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Grid View</string>
+    <string>Grid Mode</string>
    </property>
   </action>
   <action name="sysRebootAct">
