Add multi-selection context menu
fix compile errors on Mac and provide reviewed changes

fix wrong resolved conflict

removed duplicate

cleanup after latest merged PRs

minor cleanup

rename and move get_existing_dir() to File.cpp

apply reviewed changes

--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -1174,7 +1174,7 @@
   </action>
   <action name="batchRemoveCustomPadConfigurationsAct">
    <property name="text">
-    <string>Remove Custom Pad Configurations</string>
+    <string>Remove Custom Gamepad Configurations</string>
    </property>
   </action>
   <action name="batchRemoveShaderCachesAct">
