Qt: fix missing mice menu

--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -242,17 +242,17 @@
     <property name="title">
      <string>Configuration</string>
     </property>
-    <widget class="QMenu" name="menuMice">
-     <property name="title">
-      <string>Mice</string>
-     </property>
-     <addaction name="actionBasic_Mouse"/>
-     <addaction name="actionRaw_Mouse"/>
-    </widget>
     <widget class="QMenu" name="menuDevices">
      <property name="title">
       <string>Devices</string>
      </property>
+     <widget class="QMenu" name="menuMice">
+      <property name="title">
+       <string>Mice</string>
+      </property>
+      <addaction name="actionBasic_Mouse"/>
+      <addaction name="actionRaw_Mouse"/>
+     </widget>
      <addaction name="confPadsAct"/>
      <addaction name="menuMice"/>
      <addaction name="confCamerasAct"/>
@@ -296,9 +296,6 @@
     <property name="title">
      <string>Manage</string>
     </property>
-    <addaction name="confVFSDialogAct"/>
-    <addaction name="separator"/>
-    <addaction name="actionManage_Users"/>
     <widget class="QMenu" name="menuNetworkServices">
      <property name="title">
       <string>Network Services</string>
@@ -307,7 +304,6 @@
      <addaction name="confClansAct"/>
      <addaction name="confIPCAct"/>
     </widget>
-    <addaction name="menuNetworkServices"/>
     <widget class="QMenu" name="menuPortals">
      <property name="title">
       <string>Portals and Gates</string>
@@ -317,6 +313,10 @@
      <addaction name="actionManage_Dimensions_ToyPad"/>
      <addaction name="actionManage_KamenRider_RideGate"/>
     </widget>
+    <addaction name="confVFSDialogAct"/>
+    <addaction name="separator"/>
+    <addaction name="actionManage_Users"/>
+    <addaction name="menuNetworkServices"/>
     <addaction name="menuPortals"/>
     <addaction name="separator"/>
     <addaction name="actionManage_RAP_Licenses"/>
@@ -1046,7 +1046,7 @@
   </action>
   <action name="toolbar_rpcn">
    <property name="icon">
-    <iconset>
+    <iconset resource="../resources.qrc">
      <normaloff>:/Icons/rpcn.png</normaloff>:/Icons/rpcn.png</iconset>
    </property>
    <property name="text">
