--- a/rpcs3/rpcs3qt/main_window.ui
+++ b/rpcs3/rpcs3qt/main_window.ui
@@ -218,6 +218,7 @@
     <addaction name="bootRecentMenu"/>
     <addaction name="separator"/>
     <addaction name="addGamesAct"/>
+    <addaction name="addIsoGamesAct"/>
     <addaction name="bootInstallPkgAct"/>
     <addaction name="bootInstallPupAct"/>
     <addaction name="separator"/>
@@ -1511,6 +1512,11 @@
   <action name="actionDownload_Update">
    <property name="text">
     <string>Download Update</string>
+   </property>
+  </action>
+  <action name="addIsoGamesAct">
+   <property name="text">
+    <string>Add ISO Games</string>
    </property>
   </action>
  </widget>
